Changelog:

3.18
- Fixed spelling mistake in the "Item Delete Warning" window
- Fix wrong text in Extras - Mailbox description
- Clarify that the "Completion Warnings" settings is not guaranteed to work in its tooltips
- Added quest comment for Anthion's Strange Request
- Fixed the second "Of Love and Family" having the first "Of Love and Family" as prequest in the strat route.
- The "Black Dragonflight Molt" Item now has its quests correctly assigned. It should now show the item tooltip.
- Quests tab now doesn't include completed quests, as well as ignored quests, in the "total quest count" at the top
- Removed "Assisting Arch Druid Runetotem" as a prequest to Un'goro Soil (and Morrowgrain) since the quest is removed in the prepatch for TBC
- Made "To Serve Kum'isha" an Expensive Quest in the Quests tab
- Added some special search filters on the "Quests" tab. You can search for ready:yes, ready:no, completed:yes, completed:no to only show quests matching that criteria. Use "ready:no" to see what you have left to work on

3.17c
- Fixed the "/tbcprep ghetto" command to work with the TBC Prepatch changes
- Fixed Paladin T0,5 questline in prep guide

3.17b
- Actually fixed item for 'The Battle of Darrowshire' quest

3.17 (2026-01-14)
- Fixed comment for 'The Twilight Lexicon'
- Fixed item for 'The Battle of Darrowshire' quest
- Fixed the DireMaul Blacksmithing selection crashing the addon
- Added new flightpaths added to Kalimdor & Eastern Kingdoms
- Changed all routes to fly to Emerald Sanctuary in felwood now.
- Companion: Now picks up mail in Felwood at Bloodvenom Post (Was that mailbox always there??)
- Now only shows the 3.15 questlog warning for level 60 characters, and it should stop showing in the next update (3.18)

3.16 (2016-01-12)
- Removed the 0xp warning for the quest 'Medallion of Faith'
- ExtraPrep: Fixed some issues with the Rhok'delar quests that can be added